--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,11 @@ h1, h2, h3, h4, h5 {
 a {
     font-size: 18px !important;
 }
+
+.bluetitle {
+    background-color: rgb(25, 25, 255);
+    color: white;
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
